--- a/index.html
+++ b/index.html
@@ -90,7 +90,47 @@
         { text: "Solve a word problem: The sum of a two-digit number and the number formed by reversing its digits is 121. If its unit digit is 5, find the number.", marks: 5 },
         { text: "Explain square root by division method with example", marks: 5 },
         { text: "List and explain properties of rational numbers.", marks: 5 },
-        { text: "Find all cube numbers between 1 and 1000 and explain pattern.", marks: 5 }
+        { text: "Find all cube numbers between 1 and 1000 and explain pattern.", marks: 5 },
+        { text: "A Number when increased by 20%, then decreased by 20% becomes 48. What is the number?", marks: 2 },
+        { text: "Find the smallest square number exactly divisible by 2,5 and 7.", marks: 2 },
+        { text: "Solve - 0.35x-0.025 = 0.32x + 0.023", marks: 2 },
+        { text: "In a set of three consecutive natural numbers, the sum of last two is equal to the thrice of the first number. Find the sum of all the numbers", marks: 5 },
+        { text: "The length of a rectangle is increased by 40% and it's breadth is decreased by 40%. Find the original perimeter of the rectangle", marks: 5 },
+        { text: "The sum of the digits of a two digit number is 9. If 27 is subtracted from the number the digits get reversed. Find the number", marks: 5 },
+        { text: "The sum of two numbers is 11 and their difference is 5. Find the numbers.", marks: 2},
+        { text: "A person says,'12 years hence my age will be 3 times my age 12 years ago' Find his present age", marks: 5},
+        { text: "There are two numbers. One number is 3 more than the other. If 4 is subracted from the bigger number and 4 is added to the smaller number, they become equal. What are the numbers?", marks: 5},
+        { text: "A fathers age is thrice the sum of his children's ages. After 5 years he will be double the age of the son's age that time. If the sum of the sons ages is 18. Find the present age of father", marks: 5},
+        { text: "The sum of two childrens ages is 21. If the difference between their ages is 5. Find their present ages.", marks: 2},
+        { text: "The sum of a two-digit number and the number obtained by reversing its digits is 121. Find the number if it’s unit place digit is 5.", marks: 5},
+        { text: "A fruit seller buys some oranges at the rate of ₹ 5 per orange. He also buys an equal number of bananas at the rate of ₹ 2 per banana. He makes a profit of 20% on oranges and a profit of 15% on bananas. In the end, he sold all the fruits. If he earned a profit of ₹ 390, find the number of oranges.", marks: 5},
+        { text: "A steamer goes downstream from one point to another in 7 hours. It covers the same distance upstream in 8 hours. If the speed of stream be 2 km/h, find the speed of the steamer in still water and the distance between the ports", marks: 5},
+        { text: "The perimeter of a rectangle is 240 cm. If its length is increased by 10% and its breadth is decreased by 20%, we get the same perimeter. Find the dimensions of rectangle.", marks: 5},
+        { text: "A man was a typist for the month of February in 2009. He was paid Rs.500 per day but Rs.100 was deducted for the days he was absent. He recieved Rs.9,100 as the salary for the month. For how many days did he work?", marks: 2},
+        { text: "A lady went to a bank with Rs. 1,00,000. She asked the cashier to give her Rs. 500 and Rs. 1,000 currency notes in return. She got 175 currency notes in all. Find the number of each kind of currency notes.", marks: 2},
+        { text: "Solve : [y - (4 - 3y)]/[2y - (3 + 4y)] = 1/5", marks: 2},
+        { text: "There are 40 passengers in a bus, some with Rs. 3 tickets and remaining with Rs.10 tickets. The total collection from these passengers is Rs. 295. Find how many passengers have tickets worth Rs. 3", marks: 2},
+        { text: "Three numbers are in ratio 2:3:4. The sum of their cubes is 0.334125. Find the numbers", marks: 2},
+        { text: "Huma, Hubna and Seema recieved a total of Rs.2,016 such that Seema gets 1/2 of what Huma got and Hubna gets 1 2/3 times Seema's share. How much money did they get individually?", marks: 2},
+        { text: "A mother and two daughters got a room constructed for Rs. 62000. The elder one contributes 3/8 of mother's share while younger one contributes 1/2 of her mother's share. Find their contribution individually.", marks: 2},
+        { text: "Shalini cuts out circles of diameter 1 1/4 cm from a sheet of dimensions 8 3/4 by 1 1/4cm. How many full circle she cuts and also calculate the wastage of strips?", marks: 5},
+        { text: "The multiplicative inverse of (x+1) + 1/(x-1) is _____________", marks: 1},
+        { text: "Find the unit digit of 7^2 + 2^3", marks: 1},
+        { text: "The three-digit perfect cube whose sum of digits is a perfect square is _________", marks: 1},
+        { text: "The value of Sqrt(117^2 - 108^2) is __________", marks: 1},
+        { text: "Find -4/7(1/3 + 12/5) using suitable property", marks: 1},
+        { text: "Find using suitable properties - 25/3 x 12/5 - 1/3 x 12/5", marks: 2},
+        { text: "How many numbers lie between the squares of 12 and 13", marks: 2},
+        { text: "Express 272 as the sum of two consecutive numbers", marks: 1},
+        { text: "Find 106^2 without multiplying it twice", marks: 1},
+        { text: "Construct a cubical platform using 2700 cubical blocks. What is the height of this platform?", marks: 1},
+        { text: "The sum of two numbers is 11 and they differ by 5, the numbers _________ and _________", marks: 1},
+        {text: "The sum of two twin prime numbers is 60. Find the prime nos. ", marks: 2},
+        {text: "The present of Sita’s father is three times the present age of Sita. After six years sum of their ages will be 69 years. Find their present ages. ", marks: 2},
+        {text: "The numerator of a fraction is 2 less than the denominator. If one is added to its denominator, it becomes 1/2 find the fraction. ", marks: 2},
+        {text: " What should be subtracted from thrice the rational number -8/3 to get 5/2?  ", marks: 1},
+        {text: "Multiply 137592 with the smallest number to make it a perfect cube. Also find the cube of the product? ", marks: 2},
+         {text: " Find the minimum number of cuboids of dimensions 3x4x5 would reqire to make a cube", marks: 2}    
       ]
     };
 
@@ -117,9 +157,9 @@
         quizDiv.appendChild(section);
       };
 
-      renderSection("Section A – 1 Mark Questions", sectionA);
-      renderSection("Section B – 2 Mark Questions", sectionB);
-      renderSection("Section C – 5 Mark Questions", sectionC);
+      renderSection("Section A –Knowledge", sectionA);
+      renderSection("Section B –Skill", sectionB);
+      renderSection("Section C –Application", sectionC);
     }
   </script>
 
