--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <select id="subject">
     <option value="Science">Science</option>
     <option value="Maths">Maths</option>
+     <option value="English">English</option>
   </select>
 
   <button onclick="generatePaper()">Generate Paper</button>
@@ -131,7 +132,86 @@
         {text: " What should be subtracted from thrice the rational number -8/3 to get 5/2?  ", marks: 1},
         {text: "Multiply 137592 with the smallest number to make it a perfect cube. Also find the cube of the product? ", marks: 2},
          {text: " Find the minimum number of cuboids of dimensions 3x4x5 would reqire to make a cube", marks: 2}    
-      ]
+      ],
+    English[
+      {text: "Why do the courtiers call the prince ‘the Happy Prince’? Is he really happy? What does he see all around him?", marks: 2},
+        {text: "Why does the Happy Prince send a ruby for the seamstress? What does the swallow do in the seamstress’ house?", marks: 2},
+      {text: "For whom does the prince send the sapphires and why?", marks: 2},
+      {text: "What does the swallow see when it was flying over the city?", marks: 2},
+      {text: "Why did the swallow not leave the prince and go to Egypt?", marks: 2},
+      {text: "What are the precious things mentioned in the story? Why are they precious?", marks: 2},
+        {text: "Why did the Swallow cry when the Happy Prince asked him to pluck out one of the sapphires ?", marks: 2},
+      {text: "What were the drops of the rain actully ? Why did they fall ?", marks: 2},
+      {text: "Describe the statue of the Happy Prince as described in the beginning of the story ?", marks: 2},
+      {text: "How did the Happy Prince help the poor children in the city?", marks: 2},
+      {text: "How did the prince and the swallow enable the playwright to finish his work ?", marks: 2},
+      {text: "Why was the “Happy Prince” not really happy ?", marks: 2},
+      {text: "What is the moral of the story The Happy Prince ?", marks: 2},
+       {text: "How did the little swallow carry out the wishes of the Happy Prince ?", marks: 5},
+       {text: "What did Mr Rucastle tell Miss Violet Hunter about her duties?", marks: 2},
+      {text: "Why was Sherlock Holmes doubtful about the offer that was given to Miss Violet Hunter?", marks: 2},
+      {text: "What message did Miss Hunter send to Holmes through the telegram?", marks: 2},
+      {text: "What was the performance that Miss Hunter was asked to do at the Copper Beeches?", marks: 2},
+      {text: "How did Miss Hunter find out about what was going on behind her back?", marks: 2},
+       {text: "When did Miss Hunter suspect that there was something mysterious about the dark room of the house?", marks: 2},
+      {text: "How did Mr Fowler escape with Miss Alice Rucastle?", marks: 2},
+      {text: "Why was Mr Rucastle against the marriage of Mr Fowler and Miss Alice Rucastle? ", marks: 2},
+            {text: "What was Holmes' assessment about the strange things that Miss Violet Hunter was asked to do?", marks: 5},
+      {text: "Why does Violet Hunter first seek out Sherlock Holmes in The Adventure of the Copper Beeches?", marks: 1},
+       {text: "Why does Mr. Rucastle desperately want Violet Hunter to accept his job proposal in The Adventure of the Copper Beeches?", marks: 1},
+      {text: "What were the series of events that made Sherlock Holmes solve the mystery?", marks: 5},
+      {text: "why was the giant dog kept locked in the outhouse always?", marks: 2},
+      {text: "What did Sherlock Holmes anticipate after his first meeting with Miss Hunter?", marks: 2},
+      {text: "Did miss Hunter feel uncomfortable before accepting the job offer at the copper beeches? why?", marks: 2},
+       {text: "What is The main theme of The copper beeches​?", marks: 2},
+      {text: "What happened when Miss Hunter wore the blue dress at 'The Copper beeches?​", marks: 2},
+      {text: "What is the poet wondering about?(The tyger)​", marks: 2},
+            {text: "What do you think the poet is trying to say about the Tyger?​", marks: 2},
+      {text: " Where according to the poem, does the creature dwell?​", marks: 2},
+       {text: "According to the poem, where has the creature come from? ​", marks: 1},
+      {text: "What words are used to describe the animal in the poem?  ​", marks: 1},
+      {text: "What other animals are mentioned in the poem?   ​", marks: 1},
+       {text: "What type of sentences are used most in William Blake's The Tyger 'statement, question or exclamation?' ", marks: 1},
+      {text: "'What immortal hand or eye, Could frame thy fearful symmetry? 'In the lines above, whose hand or eye is the poet talking about?", marks: 1},
+       {text: "-In your opinion, does the tyger merely represent a tiger, or is it symbolic of something else?' ", marks: 5},
+      {text: "Who do you think is the creator of the tiger in the poem? ", marks: 2},
+      {text: "Why does the poet consider it daring to have created the tiger?", marks: 2},
+       {text: "Is the central theme of poem is the creation of something powerful, and the struggle to contain the creation's power? If yes Why?", marks: 2},
+       {text: "How does the poet use ironic tone?", marks: 2},
+      {text: "Why do you think the poet uses the archaic spelling, 'tyger'? ", marks: 2},
+      {text: "What does 'fearful symmetry' refer to? ", marks: 2},
+      {text: " What does the 'immortal hand or eye' refer to? ", marks: 2},
+      {text: "What is the core theme of the poem? ", marks: 2},
+      {text: "What is the meant by the expression Burning Bright?", marks: 2},
+      {text: "What image of god does Blake present in the poem?", marks: 2},
+      {text: " When is the tiger seen?", marks: 1},
+      {text: "What is the main theme of the story Self-Made Men"?, marks: 2},
+      {text: "How do Jones and Robinson try to boast each other?", marks: 2},
+      {text: " What is the irony in the story Self-Made Men", marks: 2},
+      {text: "what does the story Self-Made Men tell you about human nature? Give examples from the story to support your answer.​", marks: 5},
+      {text: "What does this story tell you about these self-made men?​​", marks: 2},
+      {text: "what do you understand by term self made men​​", marks: 2},
+      {text: "What do you learn from the story self made men? ​​​", marks: 2},
+      {text: "Self- made men finally settled on a fancy meal ending with champagne. What does this tell us about t​​​he men?", marks: 2},
+      {text: "Analyse how this story reduces the value of the 'self-made men'", marks: 2},
+      {text: "The 'Self-Made Men' is a story about false pride and ego leading the characters to do foolish things Discuss​", marks: 2},
+      {text: "In Self-Made Men, the author states that 'properly speaking, there are in the world no such men as self-made men.' However, the theme and title of his speech specifically focus on the concept of the self-made man. Tell whether or not the author is contradicting himself, and to what extent. Be sure to address why this is or isn't the case, and cite evidence from the text to support your answer.", marks: 5},
+       {text: "Compare and contrast Jones and Robinson. How are they both self-made men? Describe", marks: 2},
+      {text: "  What things showed that both the men were rich", marks: 2},
+      {text: "How does the Author convey the main theme using humor", marks: 2},
+      {text: "Write a character sketch on - 1) Jones 2) Robinsons 3)The Waiter", marks: 5},
+      {text: "What does Robinson refers to as old and innocent days? ", marks: 2},
+      {text: "Why the men change their order? ", marks: 2},
+      {text: "Describe the two men in self-made men", marks: 2},
+       {text: "What kind of accomondation did the two men have?", marks: 2},
+       {text: "Why does family and background important in shaping a person?", marks: 2},
+       {text: "Who was Alice Rucastle?", marks: 2},
+      {text: "Make a character sketch of - 1) Holmes 2) Hunter 3) Mr Folwer", marks: 5},
+      {text: "Make a character sketch of the tiger", marks: 2},
+            {text: "Miss Hunter became _________________", marks: 1 },
+      {text: "What did the two men used to eat?", marks: 1 },
+      
+    ]
     };
 
     function generatePaper() {
@@ -157,9 +237,9 @@
         quizDiv.appendChild(section);
       };
 
-      renderSection("Section A –Knowledge", sectionA);
-      renderSection("Section B –Skill", sectionB);
-      renderSection("Section C –Application", sectionC);
+      renderSection("Section A –Knowledge (Each 1 Marks)", sectionA);
+      renderSection("Section B –Skill(Each 2 Marks)", sectionB);
+      renderSection("Section C –Application (Each 5 marks)", sectionC);
     }
   </script>
 
