--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         {text: "Multiply 137592 with the smallest number to make it a perfect cube. Also find the cube of the product? ", marks: 2},
          {text: " Find the minimum number of cuboids of dimensions 3x4x5 would reqire to make a cube", marks: 2}    
       ],
-    English[
+    English: [
       {text: "Why do the courtiers call the prince ‘the Happy Prince’? Is he really happy? What does he see all around him?", marks: 2},
         {text: "Why does the Happy Prince send a ruby for the seamstress? What does the swallow do in the seamstress’ house?", marks: 2},
       {text: "For whom does the prince send the sapphires and why?", marks: 2},
@@ -185,7 +185,7 @@
       {text: "What is the meant by the expression Burning Bright?", marks: 2},
       {text: "What image of god does Blake present in the poem?", marks: 2},
       {text: " When is the tiger seen?", marks: 1},
-      {text: "What is the main theme of the story Self-Made Men"?, marks: 2},
+      {text: "What is the main theme of the story Self-Made Men?", marks: 2},
       {text: "How do Jones and Robinson try to boast each other?", marks: 2},
       {text: " What is the irony in the story Self-Made Men", marks: 2},
       {text: "what does the story Self-Made Men tell you about human nature? Give examples from the story to support your answer.​", marks: 5},
